--- a/module-aws-application-serices/ecs/2.ecs-service-task-definition/ecs-service-task-definition.yaml
+++ b/module-aws-application-serices/ecs/2.ecs-service-task-definition/ecs-service-task-definition.yaml
@@ -21,6 +21,12 @@ Resources:
             - "while true; do echo hello world; sleep 30; done"
           PortMappings:
             - ContainerPort: 80
+          LogConfiguration:
+            LogDriver: "awslogs"
+            Options:
+              awslogs-group: !Ref MyLogGroup
+              awslogs-region: "ap-southeast-1" # Change this to your region
+              awslogs-stream-prefix: "ecs"            
   FargateService:
     Type: AWS::ECS::Service
     Properties:
@@ -50,3 +56,9 @@ Resources:
             Action: 'sts:AssumeRole'
       ManagedPolicyArns:
         - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'
+  
+  MyLogGroup:
+    Type: "AWS::Logs::LogGroup"
+    Properties: 
+      LogGroupName: "/ecs/my-log-group"
+      RetentionInDays: 14 # This is optional; defines how long to keep logs. Adjust as necessary.
