Updated instructions with ecs scaling policies

--- a/module-aws-application-serices/ecs/3.ecs-scaling-policies/ecs-scaling-policies.yaml
+++ b/module-aws-application-serices/ecs/3.ecs-scaling-policies/ecs-scaling-policies.yaml
@@ -2,14 +2,12 @@ Parameters:
   ECSClusterName:
     Description: Name of the ECS Cluster
     Type: String
+    Default: "MyECSCluster"
 
   ECSServiceName:
     Description: Name of the ECS Service
     Type: String
-
-  EcsAutoScalingRoleName:
-    Description: Name of the ECS Auto Scaling Role
-    Type: String
+    Default: "my-fargate-service"
 
 Resources:
 
@@ -19,14 +17,14 @@ Resources:
       MaxCapacity: 10
       MinCapacity: 1
       ResourceId: !Sub service/${ECSClusterName}/${ECSServiceName}
-      RoleARN: !Sub arn:aws:iam::${AWS::AccountId}:role/${EcsAutoScalingRoleName}
+      RoleARN: !GetAtt EcsAutoScalingRole.Arn
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
 
   ECSServiceScalingPolicy:
     Type: 'AWS::ApplicationAutoScaling::ScalingPolicy'
     Properties:
-      PolicyName: AStepPolicy
+      PolicyName: StepPolicy
       PolicyType: StepScaling
       ScalingTargetId: !Ref EcsServiceScalableTarget
       StepScalingPolicyConfiguration:
@@ -55,3 +53,32 @@ Resources:
           Value: !Ref ECSClusterName
       AlarmActions:
         - !Ref ECSServiceScalingPolicy
+
+  EcsAutoScalingRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      RoleName: "EcsWorkshopAutoScalingRole"
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Principal:
+              Service: "application-autoscaling.amazonaws.com"
+            Action: "sts:AssumeRole"
+
+  EcsAutoScalingRolePolicy:
+    Type: "AWS::IAM::Policy"
+    Properties:
+      PolicyName: "ECSAutoScalingPolicy"
+      Roles: [!Ref EcsAutoScalingRole]
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Action:
+              - "ecs:DescribeServices"
+              - "ecs:UpdateService"
+              - "application-autoscaling:*"
+              - "cloudwatch:DescribeAlarms"
+              - "cloudwatch:PutMetricAlarm"
+            Resource: "*"
