Updated instructions for new workshop materials

--- a/module-aws-application-serices/ecs/3.ecs-scaling-policies/ecs-scaling-policies.yaml
+++ b/module-aws-application-serices/ecs/3.ecs-scaling-policies/ecs-scaling-policies.yaml
@@ -29,7 +29,7 @@ Resources:
       ScalingTargetId: !Ref EcsServiceScalableTarget
       StepScalingPolicyConfiguration:
         AdjustmentType: PercentChangeInCapacity
-        CoolDown: 60
+        Cooldown: 60
         MetricAggregationType: Average
         StepAdjustments:
           - MetricIntervalLowerBound: 0
