Added node group instructions and updated cluster setup manifest

--- a/module-aws-application-serices/eks/1.eks-cluster/eks-cluster-setup.yaml
+++ b/module-aws-application-serices/eks/1.eks-cluster/eks-cluster-setup.yaml
@@ -8,6 +8,28 @@ Resources:
       CidrBlock: '10.0.0.0/16'
       EnableDnsHostnames: true
 
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+
+  AttachGateway:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref InternetGateway
+
+  PublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+
+  PublicRoute:
+    Type: AWS::EC2::Route
+    DependsOn: AttachGateway
+    Properties:
+      RouteTableId: !Ref PublicRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway
+
   PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
@@ -16,6 +38,12 @@ Resources:
       MapPublicIpOnLaunch: true
       AvailabilityZone: !Select [ 0, !GetAZs '' ]
 
+  PublicSubnetRouteTableAssociation1:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet1
+      RouteTableId: !Ref PublicRouteTable
+
   PublicSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
@@ -23,6 +51,12 @@ Resources:
       CidrBlock: '10.0.2.0/24'
       MapPublicIpOnLaunch: true
       AvailabilityZone: !Select [ 1, !GetAZs '' ]
+
+  PublicSubnetRouteTableAssociation2:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet2
+      RouteTableId: !Ref PublicRouteTable
 
   EKSClusterRole:
     Type: AWS::IAM::Role
