Added efs integration and updated eks cluster setup manifest

--- a/module-aws-application-serices/eks/1.eks-cluster/eks-cluster-setup.yaml
+++ b/module-aws-application-serices/eks/1.eks-cluster/eks-cluster-setup.yaml
@@ -113,3 +113,9 @@ Outputs:
       Ref: "PublicSubnet2"
     Export:
       Name: "EKSCluster::SubnetId2"
+  VpcId:
+    Description: "The ID of the provisioned VPC"
+    Value: 
+      Ref: "VPC"
+    Export:
+      Name: "EKSCluster::VpcId"
