updated readme files for #1, #2 and #3 under eks for better clarity and included a comment to identify OIDC and Account parameters in addons-installation yaml

--- a/module-aws-application-serices/eks/3.efs-integration/efs-addons-installation.yaml
+++ b/module-aws-application-serices/eks/3.efs-integration/efs-addons-installation.yaml
@@ -13,13 +13,13 @@ Resources:
         Statement:
           - Effect: Allow
             Principal:
-              Federated: arn:aws:iam::<ACCOUNT_ID>:oidc-provider/<OIDC_ENDPOINT>
+              Federated: arn:aws:iam::<ACCOUNT_ID>:oidc-provider/<OIDC_ENDPOINT> # Replace with your account ID and OIDC endpoint
             Action:
               - sts:AssumeRoleWithWebIdentity
             Condition:
               StringLike:
-                <OIDC_ENDPOINT>:sub: "system:serviceaccount:kube-system:efs-csi-*"
-                <OIDC_ENDPOINT>:aud: "sts.amazonaws.com"
+                <OIDC_ENDPOINT>:sub: "system:serviceaccount:kube-system:efs-csi-*" # Replace with your OIDC endpoint
+                <OIDC_ENDPOINT>:aud: "sts.amazonaws.com" # Replace with your OIDC endpoint
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonEFSCSIDriverPolicy
 
